# formantic

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/: __init__.py  formantic.py  former.py
