[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "formantic"
description = "WTForm generator for Pydantic"
authors = [{name = "Wojciech Nowicki", email="wnowicki@me.com"}]
dynamic = ["version"]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE.md"}
dependencies = [
    "pydantic>=2.11.5",
    "wtforms>=3.1,<3.2",
]

[project.urls]
"Homepage" = "https://github.com/wnowicki/formantic"
"Source" = "https://github.com/wnowicki/formantic"

[tool.pdm]
version = {source = "scm"}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = "."

[tool.ruff]

line-length = 100
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F403"]
"**/{tests,docs,tools}/*" = ["E402", "S101"]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "ruff",
]
